# Firebird-Client-KMP

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
library-ext/: build.gradle.kts
library-ext/src/commonMain/kotlin/com/progdigy/fbclient/ext/: BigDecimal.kt  BigInteger.kt  Common.kt  DateTime.kt
native/: CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  firebird-lib-jni.cpp  linux-aarch64.sh  linux-arm.sh  linux-x86-64.sh  linux-x86.sh  macos-aarch64.sh  macos-x86-64.sh  toolchain-Darwin-aarch64.cmake  toolchain-Darwin-x86_64.cmake  toolchain-Linux-aarch64.cmake  toolchain-Linux-arm.cmake  toolchain-Linux-x86.cmake  toolchain-Linux-x86_64.cmake  toolchain-Windows-aarch64.cmake  toolchain-Windows-x86.cmake  toolchain-Windows-x86_64.cmake  windows-x86-64.sh  windows-x86.sh
native/include/: fbclient.h  iberror.h
native/include/firebird/impl/: blr.h
